idea/testData/multiplatform/duplicateActualsOneWeaklyIncompatible/middle/middle.kt
package foo

actual class <!LINE_MARKER("descr='Has declaration in common module'")!>A<!>